ros2_ws/log/build_2021-05-20_10-55-23/robot_description/stderr.log
  File "/home/mpt/Desktop/assgn2/ros2_ws/install/robot_description/lib/python3.8/site-packages/robot_description/keyboard.py", line 41
    resp.success =
                 ^
SyntaxError: invalid syntax

